# bookstore

./: .gitignore  Dockerfile  README.md  docker-compose.yml  env.dev  heroku.yml  pyproject.toml
.github/workflows/: build.yml  heroku-deploy.yml  workflow-pr.yml
bookstore/: settings.py  urls.py  views.py
order/: factories.py
order/migrations/: 0001_initial.py
order/serializers/: order_serializer.py
order/tests/: __init__.py
order/tests/test_viewsets/: test_order_viewset.py
order/viewsets/: __init__.py
product/migrations/: 0001_initial.py
product/serializers/: product_serializer.py
product/tests/: __init__.py
product/tests/test_viewsets/: test_category_viewset.py  test_product_viewset.py
